# BNES

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: cmake-multi-platform.yml
ref-docs/: 6502 Reference.html  PPU registers - NESdev Wiki.html
ref-docs/6502 Reference_files/: obelisk.css  saved_resource.html
src/: CMakeLists.txt  main.cpp
src/App/: Application.cpp  Application.h  Event.h
src/HW/: Bus.cpp  Bus.h  CMakeLists.txt  CPU.cpp  CPU.h  Constants.h  Joypad.cpp  Joypad.h  OpCodes.h  PPU.cpp  PPU.h  Rom.cpp  Rom.h  Screen.cpp  Screen.h
src/HW/Instructions/: ArithmeticInstructions.cpp  ControlFlowInstructions.cpp  LoadStoreInstructions.cpp  LogicalAndCompareInstructions.cpp  MiscellaneousInstructions.cpp  ShiftRotateInstructions.cpp  UndocumentedInstructions.cpp
src/SDL/: Buffer.cpp  Buffer.h  CMakeLists.txt  Init.h  Media.cpp  Media.h  TextureHandle.cpp  TextureHandle.h  WindowHandle.cpp  WindowHandle.h
src/SDLBind/: Buffer.cpp  Buffer.h  CMakeLists.txt  Font.h  Init.h  Media.cpp  Media.h  TextureHandle.cpp  TextureHandle.h  WindowHandle.cpp  WindowHandle.h
src/SDLBind/Graphics/: Buffer.cpp  Buffer.h  Color.h  RenderTarget.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  Window.cpp  Window.h  WindowCreateProperties.cpp  WindowCreateProperties.h
src/SDLBind/OS/: Event.cpp  Event.h  KeyboardEvents.h
src/SDLBind/Text/: Font.cpp  Font.h  TextSpec.h
src/Tools/: CMakeLists.txt  CPUDebugger.cpp  CPUDebugger.h  PPUDebugger.cpp  PPUDebugger.h  PPUPalette.h
src/common/: EnumArray.h  Time.h  Types.h  Utils.h  ranges_compat.h
src/common/Types/: Error.h  non_owning_ptr.h  overloaded.h
testsuite/: CMakeLists.txt
testsuite/CPU/: CMakeLists.txt  cpu_tests.cpp  cpu_tests_decode.cpp  cpu_tests_decode_loadstore.cpp  cpu_tests_decode_math.cpp  cpu_tests_execute.cpp  cpu_tests_execute_loadstore.cpp  cpu_tests_execute_math.cpp  cpu_tests_smallprograms.cpp
testsuite/nestest/: CMakeLists.txt  main.cpp
testsuite/snake/: CMakeLists.txt  main.cpp  main_rom.cpp  main_standalone.cpp
testsuite/text-rendering/: CMakeLists.txt  main.cpp  sdl-tutorial.cpp
testsuite/unit/: CMakeLists.txt  localization.h.in
testsuite/unit/CPU/: CMakeLists.txt  cpu_tests.cpp  cpu_tests_decode.cpp  cpu_tests_decode_loadstore.cpp  cpu_tests_decode_math.cpp  cpu_tests_execute.cpp  cpu_tests_execute_loadstore.cpp  cpu_tests_execute_math.cpp  cpu_tests_smallprograms.cpp
testsuite/unit/HW/: CMakeLists.txt  nmi_integration_tests.cpp
testsuite/unit/HW/Bus/: CMakeLists.txt  bus_tests.cpp
testsuite/unit/HW/CPU/: CMakeLists.txt  cpu_tests.cpp  cpu_tests_decode.cpp  cpu_tests_decode_loadstore.cpp  cpu_tests_decode_math.cpp  cpu_tests_disassemble.cpp  cpu_tests_disassemble_loadstore.cpp  cpu_tests_disassemble_math.cpp  cpu_tests_execute.cpp  cpu_tests_execute_loadstore.cpp  cpu_tests_execute_math.cpp  cpu_tests_nmi.cpp  cpu_tests_smallprograms.cpp
testsuite/unit/HW/PPU/: CMakeLists.txt  ppu_tests.cpp  ppu_tests_nmi.cpp  ppu_tests_sprite0hit.cpp
testsuite/unit/HW/Rom/: CMakeLists.txt  rom_tests.cpp
